Write media query to make sure progress bar does not get too short when window is smaller.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,34 @@ body {
   border-color: rgb(10,119,10);
 }
 
+/*for progress bar to show how many questions are left*/
+.barBg {
+  background:#282828;
+  width:50%;
+  margin-left: auto;
+  margin-right: auto;
+  border:5px solid #282828;
+  border-radius: 20px;
+  box-shadow: 0px 5px 17px rgba(40, 40, 40, 0.5);
+
+  margin-top: 30px;
+  visibility: hidden;
+}
+
+.bar {
+  background: #7aff32;
+  width:2%;
+  height:30px;
+  height: 15px;
+  border-radius: 12px;
+  background: -moz-linear-gradient(top, #7aff32 0%, #54a6e5 100%);
+  background: -webkit-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
+  background: -o-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
+  background: -ms-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
+  background: linear-gradient(to bottom, #7aff32 0%,#54a6e5 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=’#7aff32′, endColorstr=’#54a6e5′,GradientType=0 );
+}
+
 #logo {
   margin-left: auto;
   margin-right: auto;
@@ -123,34 +151,6 @@ footer {
   background-color: rgb(10,119,10);
   position: fixed;
   bottom: 0;
-}
-
-/*for progress bar to show how many questions are left*/
-.barBg {
-  background:#282828;
-  width:50%;
-  margin-left: auto;
-  margin-right: auto;
-  border:5px solid #282828;
-  border-radius: 20px;
-  box-shadow: 0px 5px 17px rgba(40, 40, 40, 0.5);
-
-  margin-top: 30px;
-  visibility: hidden;
-}
-
-.bar {
-  background: #7aff32;
-  width:2%;
-  height:30px;
-  height: 15px;
-  border-radius: 12px;
-  background: -moz-linear-gradient(top, #7aff32 0%, #54a6e5 100%);
-  background: -webkit-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
-  background: -o-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
-  background: -ms-linear-gradient(top, #7aff32 0%,#54a6e5 100%);
-  background: linear-gradient(to bottom, #7aff32 0%,#54a6e5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=’#7aff32′, endColorstr=’#54a6e5′,GradientType=0 );
 }
 
 /*for processing animation (green circles) below this point*/
@@ -331,12 +331,21 @@ ul#progress li:first-child {
   display: none;
 }
 
-/*media screen stuff for responsive design*/
+/*media query for keeping title of survey at 48px when window size is less than 768px*/
 
 @media screen and (max-width: 768px) {
 
   #title {
     font-size: 48px;
+  }
+
+}
+
+/*media query for changing width of progress bar so it isn't too short when the window size is less than 991px*/
+@media screen and (max-width: 991px) {
+
+  .barBg {
+    width: 75%;
   }
 
 }
